--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -4,13 +4,13 @@
   <label for="landmark_name"> Landmark Name </label>
   <input type="text" name="landmark[name]" id="land_name"> </br>
   
-  <h2>Figures</h2> </br>
+  <h2>Choose one figure</h2> </br>
   <% Figure.all.each do |figure| %>
   <label for="figure_<%=figure.id %>"><%= figure.name %></label>
   <input type="radio" id="figure_<%= figure.id %>" name="landmark[figure_id]" value="<%=figure.id%>"> </br>
   <% end %>
-  <h2>Create New Title:</h2> </br>
-  <input type="text" name="title[name]" id="new_title"> </br>
+  <h2>Create New Figure</h2> </br>
+  <input type="text" name="figure[name]" id="new_figure"> </br>
   
   <h2>Landmarks</h2> </br>
   <% Landmark.all.each do |landmark| %>
