--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -12,16 +12,8 @@
   <h2>Create New Figure</h2> </br>
   <input type="text" name="figure[name]" id="new_figure"> </br>
   
-  <h2>Landmarks</h2> </br>
-  <% Landmark.all.each do |landmark| %>
-  <label for="landmark_<%=landmark.id %>"><%= landmark.name %></label>
-  <input type="checkbox" id="landmark_<%= landmark.id %>" name="figure[landmark_ids][]" value="<%= landmark.id %>"> </br>
-  <% end %>
-  <h2>Create New Landmark:</h2> </br>
-  <label>Name:</label><input type="text" name="landmark[name]" id="new_landmark">
-  <label>Year:</label><input type="text" name="landmark[year]">
   
-  <input type="submit" value="Create New Figure">
+  <input type="submit" value="Create New Landmark">
 </form>
 
 
