--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -1,6 +1,9 @@
 <h2>All Historical Landmarks</h2>
 
-<!-- add content here -->
+<% Landmark.all.each do |landmark| %>
+  <a href="/landmarks/<%= land.id %>"><%= figure.name %> </a>
+<%end%>
+
 
 <a class="button" href="/figures">Figures</a>
 <a class="button" href="/">Home</a>
