--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -5,23 +5,8 @@
   
   <label for="landmark_name"> landmark Name </label>
   <input type="text" name="landmark[name]" id="landmark_name" value="<%= @landmark.name %>"> </br>
-  
-  <h2>Titles</h2> </br>
-  <% Title.all.each do |title| %>
-  <label for="title_<%=title.id %>"><%= title.name %></label>
-  <input type="checkbox" id="title_<%= title.id %>" name="figure[title_ids][]" value="<%= title.id %>"> </br>
-  <% end %>
-  <h2>Create New Title:</h2> </br>
-  <input type="text" name="title[name]" id="new_title"> </br>
-  
-  <h2>Landmarks</h2> </br>
-  <% Landmark.all.each do |landmark| %>
-  <label for="landmark_<%=landmark.id %>"><%= landmark.name %></label>
-  <input type="checkbox" id="landmark_<%= landmark.id %>" name="figure[landmark_ids][]" value="<%= landmark.id %>"> </br>
-  <% end %>
-  <h2>Create New Landmark:</h2> </br>
-  <label>Name:</label><input type="text" name="landmark[name]" id="new_landmark">
-  <label>Year:</label><input type="text" name="landmark[year]">
+
+  <label>Year:</label><input type="text" name="landmark[year_completed]">
   
   <input type="submit" value="Edit Figure">
 </form>
