--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -6,9 +6,9 @@
   <label for="landmark_name"> landmark Name </label>
   <input type="text" name="landmark[name]" id="landmark_name" value="<%= @landmark.name %>"> </br>
 
-  <label>Year:</label><input type="text" name="landmark[year_completed]">
+  <label>Year:</label><input type="text" name="landmark[year_completed]"> </br>
   
-  <input type="submit" value="Edit Figure">
+  <input type="submit" value="Edit Landmark">
 </form>
 
 <a class="button" href="/figures">Landmarks</a>
