--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -4,7 +4,7 @@
   <input type="hidden" name="_method" value="PATCH">
   
   <label for="landmark_name"> landmark Name </label>
-  <input type="text" name="landmark[name]" id="landmark_name" value="<%= @landmark.name %>"> </br>
+  <input type="text" name="landmark[name]" id="name" value="<%= @landmark.name %>"> </br>
 
   <label>Year:</label><input type="text" name="landmark[year_completed]"> </br>
   
