--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -3,7 +3,7 @@
 <form action="/landmarks/<%=@landmark.id%>" method="POST">
   <input type="hidden" name="_method" value="PATCH">
   
-  <label for="landmark_name"> landmark Name </label>
+  <label for="name"> landmark Name </label>
   <input type="text" name="landmark[name]" id="name" value="<%= @landmark.name %>"> </br>
 
   <label>Year:</label><input type="text" name="landmark[year_completed]"> </br>
