Automatically backed up by Learn

--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -1,7 +1,7 @@
 <h2>All Historical Landmarks</h2>
 
 <% Landmark.all.each do |landmark| %>
-  <a href="/landmarks/<%=landmark.id%>"><%= landmark.name %> </a>
+<li><a href="/landmarks/<%=landmark.id%>"><%= landmark.name %></a></li>
 <%end%>
 
 
