--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -6,7 +6,7 @@
   <label for="name"> landmark Name </label>
   <input type="text" name="landmark[name]" id="name" value="<%= @landmark.name %>"> </br>
 
-  <label>Year:</label><input type="text" name="landmark[year_completed]"> </br>
+  <label>Year:</label><input type="text" name="landmark[year_completed]" id="year_completed"> </br>
   
   <input type="submit" value="Edit Landmark">
 </form>
