--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,4 +1,8 @@
 <h2>Edit Historical Landmark</h2>
+<h3>Current Landmark Name</h3>
+<p><%=@landmark.name%></p>
+<h3>Current Landmark Year</h3>
+<p><%=@landmark.year_completed%></p>
 
 <form action="/landmarks/<%=@landmark.id%>" method="POST">
   <input type="hidden" name="_method" value="PATCH">
