--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -1,7 +1,7 @@
 <h2>All Historical Landmarks</h2>
 
 <% Landmark.all.each do |landmark| %>
-<li><a href="/landmarks/<%=landmark.id%>"><%= landmark.name %></a></li>
+<li><a href="/landmarks/<%=landmark.id%>"><%= landmark.name %> , <%=landmark.year_completed%></a></li>
 <%end%>
 
 
